# semeval-2025-task3

./: .gitignore  README.md  create_context.py  main.py  pyproject.toml  scorer.py
data/context/ar-tst-translated-English.v1_perplexity-sonar-pro/: tst-ar-1.context.txt  tst-ar-10.context.txt  tst-ar-100.context.txt  tst-ar-101.context.txt  tst-ar-102.context.txt  tst-ar-103.context.txt  tst-ar-104.context.txt  tst-ar-105.context.txt  tst-ar-106.context.txt  tst-ar-107.context.txt  tst-ar-108.context.txt  tst-ar-109.context.txt  tst-ar-11.context.txt  tst-ar-110.context.txt  tst-ar-111.context.txt  tst-ar-112.context.txt  tst-ar-113.context.txt  tst-ar-114.context.txt  tst-ar-115.context.txt  tst-ar-116.context.txt  tst-ar-117.context.txt  tst-ar-118.context.txt  tst-ar-119.context.txt  tst-ar-12.context.txt  tst-ar-120.context.txt  tst-ar-121.context.txt  tst-ar-122.context.txt  tst-ar-123.context.txt  (+122 more)
labeled_outputs/: readme.txt
labeler/: __init__.py  base_labeler.py  context_dep_labeler.py  context_free_labeler.py  context_reason_dep_labeler.py  dspy_labeler.py  kg_labeler.py  qa_context_dep_labler.py  schemas.py  tool_based_labeler.py  utils.py
prompts/: atomic_fact_sys.md  generate_prompts.py  p10_sys.md  p11_sys.md  p12_sys.md  p13_sys.md  p14_sys.md  p1_sys.md  p2_sys.md  p2_user.md  p3_sys.md  p4_sys.md  p4_user.md  p5_sys.md  p5_user.md  p6_sys.md  p7_sys.md  p7_user.md  p8_sys.md  p9_sys.md  summarizer_sys_prompt.md  summarizer_user_prompt.md
tools/: __init__.py  deepseek_tool.py  deploy_helper.py  perplexity_tool.py  tools.py  translator.py
(+9795 files in other folders)
