[project]
name = "mushroom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.9",
    "python-dotenv>=1.0.1",
    "langchain-openai>=0.2.10",
    "langchain-ollama>=0.2.0",
    "huggingface-hub>=0.26.2",
    "langchain-community>=0.3.8",
    "ollama>=0.4.1",
    "openai>=1.57.0",
    "ruff>=0.8.2",
    "scipy>=1.14.1",
    "pandas>=2.2.3",
    "invoke>=2.2.0",
    "click>=8.1.7",
    "langchain-anthropic>=0.3.1",
    "tavily-python>=0.5.0",
    "loguru>=0.7.3",
    "pip>=24.3.1",
    "ipykernel>=6.29.5",
    "grandalf>=0.8",
    "langchain-experimental>=0.3.4",
    "networkx>=3.4.2",
    "matplotlib>=3.10.0",
    "dash>=2.18.2",
    "dspy>=2.5.43",
]
